<resources>
    <string name="app_name">MascotaMenus</string>
    <string name="action_settings">Settings</string>
    <string name="mContacto">Contacto</string>
    <string name="mAcerca">Acerca de</string>
    <string name="mConfCuenta">Configurar Cuenta</string>
    <string name="mRecibirNotificaciones">Recibir Notificaciones</string>
    <string name="etNombre">Nombre</string>
    <string name="etCorreo">Email</string>
    <string name="etMensaje">Mensaje</string>
    <string name="etNombreCuenta">Escribe tu usuario</string>
    <string name="btnComentario">Enviar Comentario</string>
    <string name="tituloContacto">Contacto</string>
    <string name="btnSaveCuenta">Guardar Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user1" translatable="false">jose_1985c</string>
    <string name="user2" translatable="false">perritoboby1826</string>
    <string name="user3" translatable="false">poloth85</string>
    <string name="user4" translatable="false">gotei13_11</string>
    <string name="user5" translatable="false">perritamalu3429</string>

    <string name="user1_id" translatable="false">3885420775</string>
    <string name="user2_id" translatable="false">3964909392</string>
    <string name="user22_id" translatable="false">3687996825</string>
    <string name="user3_id" translatable="false">3919799964</string>
    <string name="user4_id" translatable="false">3885420775</string>
    <string name="user5_id" translatable="false">3885420775</string>

    <string name="msg_error_conexion">Fallo en la conexion con Instagram</string>
    <string name="msg_lanzar_notificacion">Lanzar Notificacion</string>
</resources>
