<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.unam.mascotamenus.configurar_cuenta">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTituloConfigurarCuenta"
        android:text="@string/app_name"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTituloConfigurarCuenta"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        >
    <EditText
        android:id="@+id/inputNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etNombreCuenta"
        android:inputType="text|textNoSuggestions"
        >

    </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilNombre"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnGuardarCuenta"
        android:text="@string/btnSaveCuenta"
        android:onClick="asignarUsuario"
        />


</RelativeLayout>
